bash-startup-probe-immutable.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: bash-startup-probe-immutable
  name: bash-startup-probe-immutable
spec:
  containers:
  - name: bash-startup-probe-immutable
    image: nginx
    startupProbe:
      exec:
        command:
        - rm
        - /bin/bash
      initialDelaySeconds: 1
      periodSeconds: 5
