capability-context.yaml
apiVersion: v1
kind: Pod
metadata:
  name: capability-context
spec:
  containers:
  - name: main
    image: busybox
    command: [ "sh", "-c", "sleep 1h" ]
    securityContext:
      capabilities:
        add: ["SYS_TIME"]
