non-root-context.yaml
apiVersion: v1
kind: Pod
metadata:
  name: non-root-context
spec:
  containers:
  - name: main
    image: busybox
    command: [ "sh", "-c", "sleep 1h" ]
    securityContext:
      runAsNonRoot: true
