security-context-immutable.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: security-context-immutable
  name: security-context-immutable
spec:
  containers:
  - name: ubuntu
    image: ubuntu
    command: ["sleep","3600"]
    securityContext:
      readOnlyRootFilesystem: true
