user-context.yaml
apiVersion: v1
kind: Pod
metadata:
  name: user-context
spec:
  securityContext:
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
  containers:
  - name: main
    image: busybox
    command: [ "sh", "-c", "sleep 1h" ]
