secure-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
      - test-ingress.com
    secretName: secure-ingress
  rules:
  - host: test-ingress.com 
    http:
      paths:
      - path: /ingress1
        pathType: Prefix
        backend:
          service:
            name: ingress-service1
            port:
              number: 80
              
      - path: /ingress2
        pathType: Prefix
        backend:
          service:
            name: ingress-service2
            port:
              number: 80
