access-metadata-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-metadata-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: metadata-access
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 169.254.169.254/32
